  - #4299, #4304, ST_GeneratePoints is now VOLATILE. IMMUTABLE version with
           seed parameter added. (Mike Taves)
  - #4278, ST_3DDistance and ST_3DIntersects now support Solid TIN and Solid
           POLYHEDRALSURFACE (Darafei Praliaskouski)
  - #4348, ST_AsMVTGeom (GEOS): Enforce validation at all times (Raúl Marín)
  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)

PostGIS 2.5.0
2018/09/23
WARNING: If compiling with PostgreSQL+JIT, LLVM >= 6 is required
Supported PostgreSQL versions for this release are:
PostgreSQL 9.4 - PostgreSQL 12 (in development)
GEOS >= 3.5

* New Features *
  - #1847, SP-GiST 2D and 3D support for PostgreSQL 11+ (Esteban Zimányi and
           Arthur Lesuisse from Université Libre de Bruxelles (ULB), Darafei
           Praliaskouski)
  - #4056, ST_FilterByM (Nicklas Avén)
  - #4050, ST_ChaikinSmoothing (Nicklas Avén)
  - #3989, ST_Buffer single sided option (Stephen Knox)
  - #3876, ST_Angle function (Rémi Cura)
  - #3564, ST_LineInterpolatePoints (Dan Baston)
  - #3896, PostGIS_Extensions_Upgrade() (Regina Obe)
  - #3913, Upgrade when creating extension from unpackaged (Sandro Santilli)
  - #2256, _postgis_index_extent() for extent from index (Paul Ramsey)
  - #3176, Add ST_OrientedEnvelope (Dan Baston)
  - #4029, Add ST_QuantizeCoordinates (Dan Baston)
  - #4063, Optional false origin point for ST_Scale (Paul Ramsey)
  - #4082, Add ST_BandFileSize and ST_BandFileTimestamp,
           extend ST_BandMetadata (Even Rouault)
  - #2597, Add ST_Grayscale (Bborie Park)
  - #4007, Add ST_SetBandPath (Bborie Park)
  - #4008, Add ST_SetBandIndex (Bborie Park)

* Breaking Changes *
  - #4054, ST_SimplifyVW changed from > tolerance to >= tolerance
  - #3885, version number removed from address_standardize lib file
           (Regina Obe)
  - #3893, raster support functions can only be loaded in the same schema
           with core PostGIS functions. (Sandro Santilli)