@@ -336,6 +336,54 @@ ERROR:  lwgeom_union: GEOS Error: TopologyException: Input geom 0 is invalid: Se
 #4089|LINESTRING Z (1 1 1,3 3 1)
 #4081|f|t
 NOTICE:  table "bug_4144_table" does not exist, skipping
+contains210|t
+contains211|f
+contains212|f
+contains213|f
+within210|f
+within211|f
+within212|f
+within213|f
+containsproperly210|t
+containsproperly211|f
+containsproperly212|f
+containsproperly213|f
+overlaps210|f
+overlaps211|f
+overlaps212|f
+overlaps213|f
+covers210|t
+covers211|t
+covers212|f
+covers213|f
+coveredby210|f
+coveredby211|f
+coveredby212|f
+coveredby213|f
+crosses210|f
+crosses211|f
+crosses212|f
+crosses213|t
+touches210|f
+touches211|t
+touches212|f
+touches213|f
+disjoint210|f
+disjoint211|f
+disjoint212|t
+disjoint213|f
+relate210|102FF1FF2
+relate211|FF2101FF2
+relate212|FF2FF1102
+relate213|102FF10F2
+relate_pattern210|f
+relate_pattern211|f
+relate_pattern212|t
+relate_pattern213|f
+equals210|t
+equals211|t
+equals212|t
+equals213|t
 #4299|t
 #4304|t|t|t|t
 ERROR:  BOX3D_construct: args can not be empty points
